src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Course_Type__c</fullName>
        <description>Used to sort products by course types, or to indicate parent products in portal.</description>
        <inlineHelpText>Used to sort products by course types, or to indicate parent products in portal.</inlineHelpText>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section I and II Combined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speech</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Start_Date__c</fullName>
        <description>For annual events, the date when this event is next scheduled to start.  This will be used to set opportunity close dates and to label opportunities.  It needs to be updated each year. For products that are available at any time, leave this field blank.</description>
        <label>Next Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Year_Offered__c</fullName>
        <description>For annual events, this is the year when this event will next take place.  It is calculated based on &quot;Next Start Date.&quot;</description>
        <formula>TEXT(YEAR(Next_Start_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For annual events, this is the year when this event will next take place.  It is calculated based on &quot;Next Start Date.&quot;</inlineHelpText>
        <label>Next Year Offered</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used by portal for summer school course selection.</inlineHelpText>
        <label>Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Child Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QB_Item_List_ID__c</fullName>
        <description>The internal ID of the item this product is in QuickBooks.</description>
        <inlineHelpText>The internal ID of the item this product is in QuickBooks.</inlineHelpText>
        <label>QuickBooks Item List ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuickBooks__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or not this product came from QuickBooks item table.</description>
        <inlineHelpText>Indicates whether or not this product came from QuickBooks item table.</inlineHelpText>
        <label>QuickBooks?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PaymentConnect Category this product is associated with.</description>
        <inlineHelpText>PaymentConnect Category this product is associated with.</inlineHelpText>
        <label>Category</label>
        <referenceTo>pymt__Category__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pymt__On_Payment_Completed__c</fullName>
        <inlineHelpText>PaymentConnect Action to perform after this product has been paid for.</inlineHelpText>
        <label>On Payment Completed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Tangible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the product is a physical product (ie requires shipping).</description>
        <inlineHelpText>Check if the product is a physical product (ie requires shipping).</inlineHelpText>
        <label>Tangible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the item is taxable.</description>
        <inlineHelpText>Check if the item is taxable.</inlineHelpText>
        <label>Taxable</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>Active_Courses</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Parent_Product__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Summer School Course</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Courses</label>
    </listViews>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>QuickBooks__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Course_Type__c</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>PortalProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Next_Year_Offered__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Course_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Course_Type__c</field>
            <operation>equals</operation>
            <value>Parent</value>
        </filters>
        <label>Portal Products</label>
    </listViews>
</CustomObject>